--- a/web/play.html
+++ b/web/play.html
@@ -76,7 +76,8 @@
 				<!-- Main Content -->
 				<div class="main-col8 tablet-col6 clearfix border-right">
 					<div id="gameStatus" class="statusMessage">
-						<strong>Your Move</strong>
+						<strong id="gameStatusHeader">Welcome! Press 'Run' to start game.</strong>
+						<p id="gameStatusContent"></p>
 					</div>
 					<section id="game-board" class="module mediablock">
 						<div id="board" class="clearfix;"></div>
