removing level 6 from UI

--- a/web/play.html
+++ b/web/play.html
@@ -110,8 +110,8 @@
 										<option value="2">Level 2</option>
 										<option value="3">Level 3</option>
 										<option value="4">Level 4</option>
-										<option value="5">Level 5</option>
-										<option value="6">Level 6 (Hardest)</option>
+										<option value="5">Level 5 (Hardest)</option>
+                                        <!-- <option value="6">Level 6 (Hardest)</option> -->
 									</select>
 								</div>
 								<fieldset class="formfield main-col4 no-gutter">
