fixing some text on the landing page

--- a/web/index.html
+++ b/web/index.html
@@ -76,22 +76,24 @@
 						<h2>What Is Four in a Row?</h2>
 						<p>Four in a Row is a simple game in which players take alternating turns dropping a single play token into one of seven columns in a vertically oriented board. As the name suggests, the first player to align four adjacent play tokens in a horizontal, vertical, or diagonal fashion wins the game.</p>
 						
-						<p>While the rules are simple, coming up with an efficient AI to play the game well is a challenging (and fun) endeavor. If you're up to the challenge, try to take on one of our engineer-submitted AIs in a one-on-one deathmatch.</p>
+						<p>While the rules are simple, coming up with an efficient AI to play the game well is a challenging (and fun) endeavor. If you're up to the challenge, try to take on one of our engineer-submitted AIs in a one-on-one battle.</p>
 					</section>
 					<section class="module mediablock">
 						<h2>How to Play</h2>
-						<p>There are three ways to play:</p>
+						<p>There are several ways to play:</p>
 						<ul>
 							<li>Write a javascript AI in our <a href='play.html'>online code editor</a></li>
                             <li>Use one of the <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/python">Python</a>, 
-                                or <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/ruby">Ruby</a>
+                                <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/ruby">Ruby</a>,
+                                <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/java">Java</a>,
                                 or <a href="https://github.com/yodle/four-in-a-row/tree/master/clients/go">Go</a> clients</li>
-							<li>Roll your own in your language of choice against the Four in a Row Rest API</li>
+							<li>Roll your own client in your language of choice against the Four in a Row API</li>
+							<li>Manually</li>
 						</ul>
 					</section>
 					<section class="module mediablock">
-						<h2>REST API Documentation</h2>
-						<p>The REST API consists of two primary API methods and one supporting method for testing purposes. Each method returns the same information in the response, which is encoded in JSON format. Where resource identifiers are required in the URL, they are denoted as <tt>:param_description</tt>. All API URLs are relative to http://challenge.yodle.com:8080</p>
+						<h2>API Documentation</h2>
+						<p>The API consists of two primary API methods and one supporting method for testing purposes. Each method returns the same information in the response, which is encoded in JSON format. Where resource identifiers are required in the URL, they are denoted as <tt>:param_description</tt>. All API URLs are relative to http://challenge.yodle.com:8080</p>
 
 
 						<div id="keys-values" class="clearfix">
